[package]
name = "tokio-io-rewind"
version = "0.1.3"
edition = "2021"
description = "A simple library to rewind tokio::io::AsyncRead and tokio::io::AsyncWrite streams"
repository = "https://github.com/automesh-network/tokio-io-rewind"
license = "MIT"
readme = "README.md"
keywords = ["tokio", "io", "rewind", "stream"]

[dependencies]
tokio = "1.36.0"
bytes = "1.6.0"

[dev-dependencies]
tokio = { version = "1.36.0", features = ["full"]}

[lints.clippy]
all = "deny"
pedantic = "deny"
